# exp_ogl

./: .gitignore  CMakeLists.txt  camera.h  data.h  direct_fshader  flshader~  fshader  light_fshader  main.cpp  multiple_lights_fshader  point_fshader  shader.h  smooth_spotlight_fshader  spotlight_fshader  texture.h  vshader
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
